--- a/templates/base.html
+++ b/templates/base.html
@@ -327,6 +327,32 @@
                                     </a></li>
                                 </ul>
                             </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="accountingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fas fa-calculator"></i><span class="nav-text">المحاسبة</span>
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="accountingDropdown">
+                                    <li><a class="dropdown-item" href="/accounting/">
+                                        <i class="fas fa-tachometer-alt"></i> لوحة التحكم
+                                    </a></li>
+                                    <li><a class="dropdown-item" href="/accounting/accounts/">
+                                        <i class="fas fa-sitemap"></i> شجرة الحسابات
+                                    </a></li>
+                                    <li><a class="dropdown-item" href="/accounting/transactions/">
+                                        <i class="fas fa-file-invoice"></i> القيود المحاسبية
+                                    </a></li>
+                                    <li><a class="dropdown-item" href="/accounting/advances/">
+                                        <i class="fas fa-hand-holding-usd"></i> سلف العملاء
+                                    </a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="/accounting/reports/trial-balance/">
+                                        <i class="fas fa-balance-scale"></i> ميزان المراجعة
+                                    </a></li>
+                                    <li><a class="dropdown-item" href="/accounting/reports/customer-balances/">
+                                        <i class="fas fa-users"></i> أرصدة العملاء
+                                    </a></li>
+                                </ul>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/database/">
                                     <i class="fas fa-database"></i><span class="nav-text">إدارة البيانات</span>
