--- a/customers/templates/customers/customer_detail.html
+++ b/customers/templates/customers/customer_detail.html
@@ -87,7 +87,7 @@
                         </div>
                         <div class="col-md-2 text-end">
                             <div class="btn-group-vertical d-grid gap-2">
-                                <a href="{% url 'orders:order_create' %}?customer={{ customer.code }}" class="btn btn-success btn-sm">
+                                <a href="{% url 'orders:wizard_start_new' %}?customer={{ customer.code }}" class="btn btn-success btn-sm">
                                     <i class="fas fa-plus"></i> {% trans 'إنشاء طلب' %}
                                     {% if is_cross_branch %}
                                         <small class="d-block">مرتبط بفرعك</small>
