--- a/orders/templates/orders/wizard/step5_contract.html
+++ b/orders/templates/orders/wizard/step5_contract.html
@@ -143,7 +143,7 @@
                                     <small class="text-muted">
                                         العدد: {{ accessory.count }}
                                         {% if accessory.size %}
-                                            - المقاس: {{ accessory.size|floatformat:-3 }}
+                                            - المقاس: {{ accessory.size|stringformat:"g" }}
                                         {% endif %}
                                         {% if accessory.color %}
                                             - اللون: {{ accessory.color }}
